# main_server

./: Dockerfile  compose.yaml  pyproject.toml
src/: app.py  settings.py  unit_of_work.py
src/adapters/: jwt_token.py
src/adapters/database/: repositories.py  repository_gateway.py
src/adapters/database/models/: __init__.py  attributes.py  base.py
src/api/: __init__.py  authentication.py
src/schemas/api/: authentication.py
src/schemas/mappers/: __init__.py  authentication.py
src/service/: authentication.py
src/utils/: dependencies.py  repository.py
