[project]
name = "azs-fefu"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "matv864", email = "matv864@gmail.com" }
]
dependencies = [
    "fastapi>=0.114.0",
    "sqlalchemy>=2.0.34",
    "pydantic-settings>=2.4.0",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "fastadmin>=0.2.13",
    "bcrypt>=4.2.0",
    "passlib>=1.7.4",
    "pydantic>=2.9.2",
    "granian[reload]>=1.7.6",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/udom"]

[tool.mypy]
# mypy src
ignore_missing_imports = true
plugins = ['pydantic.mypy']

# Exclude formatting to save order in admin panel
[tool.isort]
skip_glob = ["src/admin/admin_models/__init__.py"]
[tool.black]
force-exclude="src/admin/admin_models/__init__.py"
[tool.ruff]
exclude = ["src/admin/admin_models/__init__.py"]
